# imaginarium-challange

./: .dockerignore  .gitignore  Cargo.toml  README.md  backend.dockerfile  docker-compose.ci.yml  docker-compose.stack.yml  docker-compose.yml  frontend.dockerfile  justfile
assets/: Typical_2D_platformer_example.ldtk
docker/: server.dockerfile  wasm.dockerfile
game/: Cargo.toml  README.md
game/frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
game/frontend/public/: site.webmanifest
game/frontend/src/: App.vue  RustBridge.ts  style.css
game/frontend/src/assets/: RobotExpressive.glb
game/frontend/src/components/: AnimatedBackground.vue  LoadingScreen.vue  MonumentPrompt.vue
game/src/: builder.rs  button_plugin.rs  camera.rs  fox_plugin.rs  js_bridge_plugin.rs  lib.rs  main.rs  network.rs  player.rs  robot.rs  sound_effects.rs  tokens.rs  ui.rs  web_bridge.rs
infrastructure/: .gitignore  locals.tf  main.tf  network.tf  oss.tf
server/: .env  Cargo.toml
server/src/: api.rs  comfyui.rs  main.rs  manager.rs  vector.rs  world.rs
server/workflow/: isometric.json
shared/: Cargo.toml
shared/src/: lib.rs
src/: button_plugin.rs  fox_plugin.rs  main.rs  mouse_plugin.rs  player.rs  tokens.rs
