[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_ecs_ldtk = "0.11.0"
bevy_rapier2d = "0.29.0"
wasm-bindgen = "0.2.100"
bevy_infinite_grid = "0.14.1"
bevy_panorbit_camera = "0.25.0"
bevy_sprite3d = "4.0.0"
num-traits = "0.2"
fastrand = "2.3.0"
bevy_mod_skinned_aabb = "0.1.0"