[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3" }
bevy_rapier2d = "0.29.0"
wasm-bindgen = "0.2.100"
bevy_infinite_grid = "0.14.1"
bevy_panorbit_camera = "0.25.0"
bevy_sprite3d = "4.0.0"
num-traits = "0.2"
fastrand = { version = "2.3.0", features = ["js"] }
bevy_mod_skinned_aabb = "0.1.0"
bincode = { version = "2.0.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
shared = { path = "../shared" }

url = "2.5.4"
wasm-bindgen-futures = { version = "0.4.50", features = ["futures-core"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tokio-tungstenite-wasm = { version = "0.5.0", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3.31", features = ["futures-sink"] }
wasm-timer = "0.2.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }

