[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
shared = { path = "../shared", features = ["native"]}
tokio-tungstenite = "0.26.2"
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
serde_json = "1.0.140"
