[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
shared = { path = "../shared", features = ["native"]}
tokio-tungstenite = "0.26.2"
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
serde_json = "1.0.140"
ollama-rs = "0.3.0"
parquet = "55.0.0"
qdrant-client = "1.13.0"
reqwest = "0.12.15"
fastrand = "2.3.0"
axum = { version = "0.8.3", features = ["multipart", "tokio"] }
tower-http = { version = "0.6.2", features = ["tokio", "fs", "cors"] }
uuid = { version = "1.12.1", features = ["v4"] }
